syntax = "proto3";

package diskqueue;

service Diskqueue {
    rpc Publish     (PublishRequest)         returns (PublishReply)             {}
    rpc MPublish    (stream PublishRequest)  returns (PublishReply)             {}
    rpc Subscribe   (SubscribeRequest)       returns (SubscribeReply)           {}
    rpc Cancel      (CancelRequest)          returns (CancelReply)              {}
    rpc Pull        (PullRequest)            returns (PullReply)                {}
    rpc KeepAlive   (KeepAliveRequest)       returns (stream KeepAliveReply)    {}
}

message Message {
    uint64  id   = 1;
    bytes   data = 2;
}

message PublishRequest {
    string topic = 1;
    bytes  data  = 2; 
}

message PublishReply {
}

message SubscribeRequest {
    string topic    = 1;
    string channel  = 2;
    uint64 msgId    = 3;
}

message SubscribeReply {
}

message CancelRequest {
}

message CancelReply {
}

message PullRequest {
}

message PullReply {
    Message message = 1;
}

message KeepAliveRequest {
}

message KeepAliveReply {
}
